Fix horizontal scrolling on small screens.

--- a/public/stylesheets/client.css
+++ b/public/stylesheets/client.css
@@ -2,6 +2,11 @@ html {
     min-height: 100%;
     background-color: #CCCCCC;
     box-shadow: inset 0 0 50vw 0 rgba(0,0,0,0.3);
+    width: 100%;
+}
+
+.container {
+    overflow: hidden;
 }
 
 body {
